src/sass/global.scss
@use "./variables/colors.scss" as *;
@use "$nodeModules/normalize.css/normalize.css" as *;

:root,
::backdrop {
	--text-primary: #{$color-gray-900};
	--text-primary--hover: #{$color-gray-500};

	--text-secondary: #{$color-gray-500};
	--text-secondary-2: #{$color-gray-600};

	--background-color: #{$color-gray-50};
	--background-color-toast: #{$color-gray-25};

	--accent-neutral-50: #{$color-gray-50};
	--accent-neutral-100: #{$color-gray-100};
	--accent-neutral-200: #{$color-gray-200};
	--accent-neutral-300: #{$color-gray-300};
	--accent-neutral-400: #{$color-gray-400};
	--accent-neutral-500: #{$color-gray-500};
	--accent-neutral-600: #{$color-gray-600};
	--accent-neutral-700: #{$color-gray-700};
	--accent-neutral-800: #{$color-gray-800};
	--accent-neutral-900: #{$color-gray-900};

	--accent-positive-50: #{$color-green-50};
	--accent-positive-100: #{$color-green-100};
	--accent-positive-200: #{$color-green-200};
	--accent-positive-300: #{$color-green-300};
	--accent-positive-400: #{$color-green-400};
	--accent-positive-500: #{$color-green-500};
	--accent-positive-600: #{$color-green-600};
	--accent-positive-700: #{$color-green-700};
	--accent-positive-800: #{$color-green-800};
	--accent-positive-900: #{$color-green-900};

	--accent-info-50: #{$color-blue-50};
	--accent-info-100: #{$color-blue-100};
	--accent-info-200: #{$color-blue-200};
	--accent-info-300: #{$color-blue-300};
	--accent-info-400: #{$color-blue-400};
	--accent-info-500: #{$color-blue-500};
	--accent-info-600: #{$color-blue-600};
	--accent-info-700: #{$color-blue-700};
	--accent-info-800: #{$color-blue-800};
	--accent-info-900: #{$color-blue-900};

	--accent-negative-50: #{$color-red-50};
	--accent-negative-100: #{$color-red-100};
	--accent-negative-200: #{$color-red-200};
	--accent-negative-300: #{$color-red-300};
	--accent-negative-400: #{$color-red-400};
	--accent-negative-500: #{$color-red-500};
	--accent-negative-600: #{$color-red-600};
	--accent-negative-700: #{$color-red-700};
	--accent-negative-800: #{$color-red-800};
	--accent-negative-900: #{$color-red-900};

	--site-padding: #{$space-md};

	@media (min-width: $bp-512) {
		--site-padding: #{$space-md + $space-sm};
	}

	@media (min-width: $bp-900) {
		--site-padding: #{$space-lg};
	}
}

html {
	height: 100%;

	box-sizing: border-box;
	overflow-x: hidden;

	scroll-behavior: smooth;

	&:has(dialog[open]) {
		overflow: hidden;
	}
}

:where(*, *:before, *:after) {
	box-sizing: inherit;
	margin: 0;
	padding: 0;

	text-transform: capitalize;

	scrollbar-width: thin;
}

@supports selector(::-webkit-scrollbar) {
	* {
		scrollbar-width: auto;
	}

	::-webkit-scrollbar {
		width: $space-xs + $space-xxs;
		height: $space-xs + $space-xxs;
	}

	/* Track */
	::-webkit-scrollbar-track {
		background: var(--accent-neutral-50);
	}

	/* Handle */
	::-webkit-scrollbar-thumb {
		background: var(--accent-neutral-300);
		border-radius: 100rem;
	}

	/* Handle on hover */
	::-webkit-scrollbar-thumb:hover {
		background: var(--accent-neutral-400);
	}
}

body {
	display: flex;
	position: relative;

	min-height: 100vh;
	width: 100%;

	flex-direction: column;
	font-family: "Lato", sans-serif;

	color: var(--text-primary);
	background-color: var(--background-color);
}

img {
	max-width: 100%;
}

:where(body):where(*, *:before, *:after) {
	font-size: $text;
}

:where(li) {
	list-style: none;
}

:where(a) {
	text-decoration: none;
	color: inherit;

	&:hover {
		color: var(--text-primary--hover);
	}
}

:where(h2, h3),
h1 {
	font-size: $text-heading;
	margin: 0;
}

:where(h4, h5, h6) {
	font-size: $text-subheading;
}

:where(button) {
	border: none;
	background-color: unset;
	cursor: pointer;

	&:hover {
		background-color: unset;
	}
}

.toaster {
	z-index: 500 !important;

	& .base {
		max-width: 30rem !important;

		color: var(--text-primary) !important;
		background-color: var(--background-color-toast) !important;
	}
}

.fullWidth {
	margin-inline: calc(-1 * var(--site-padding));
}

